# claude-meter

./: Claude Meter.spec  LICENSE  Makefile  README.md  entry.py  pyproject.toml  requirements.txt  setup.py
assets/: icon.icns
claude_meter/: __init__.py  __main__.py  app.py  config.py  constants.py  notifications.py  utils.py  watcher.py
claude_meter/trackers/: __init__.py  api_tracker.py  claude_code.py
